# mlb-cli-py

./: .gitignore  AGENTS.md  LICENSE  README.md  mlb_cli.py  mlb_tui.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: publish.yml  pylint.yml  test.yml
app/: config.py  exceptions.py  logger.py  mlb_cli.py  state.py
app/models/: base_data_source.py  cache_service.py  data_service.py  statsapi_source.py
app/screens/: __init__.py  box_score_screen.py  calendar_screen.py  error_screen.py  main_screens.py  schedule_screen.py  standings_screen.py
app/widgets/: __init__.py  animations.py  calendar_widget.py  game_widget.py  game_widgets.py  navigation_widget.py  separator.py  standing_widget.py
tests/: test_app_lifecycle.py  test_application_state.py  test_box_score_navigation.py  test_calendar_interaction.py  test_error_handling.py  test_mlb_cli.py  test_navigation_logic.py  test_selection_persistence.py
tests/models/: test_cache_service.py  test_data_service.py  test_statsapi_source.py
tests/screens/: test_box_score_screen.py  test_main_screens.py
tests/widgets/: test_animations.py  test_game_widgets.py
