[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-cli-py"
version = "0.1.0"
description = "A modern TUI for MLB scores, standings, and schedules"
readme = "README.md"
authors = [{ name = "Conor Cleary" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Terminals",
]
dependencies = [
    "pytermgui==7.7.4",
    "MLB-StatsAPI==1.9.0",
    "redis==5.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "fakeredis==2.23.2",
]

[project.scripts]
mlb-cli = "app.mlb_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pylint.messages_control]
disable = ["fixme"]
